--- a/pocketbase/docker-compose.yml
+++ b/pocketbase/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       APP_HOST: pocketbase_app_1
       APP_PORT: 8090
-      PROXY_AUTH_WHITELIST: "/api/*"
+      PROXY_AUTH_ADD: "false"
   
   app:
     image: ghcr.io/muchobien/pocketbase:0.22.11@sha256:04dd9850554a24f82cfee060ff394179baaecc0f97e7721d9dd06818d26fd671
