--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -20,13 +20,17 @@ description: >-
   Available in over 90 languages, and compatible with Windows, Mac and Linux machines, Firefox works no matter what you are using or where you are. Make sure your operating system is up to date for the best experience.
 releaseNotes: >-
   - The Copy Without Site Tracking option can now remove parameters from nested URLs. It also includes expanded support for blocking over 300 tracking parameters from copied links, including those from major shopping websites. Keep those trackers away when sharing links!
+  
   - Firefox now supports Content-encoding: zstd (zstandard compression). This is an alternative to broti and gzip compression for web content, and can provide higher compression levels for the same CPU used, or conversely lower server CPU use to get the same compression. This is heavily used on sites such as Facebook.
+  
   - Catalan is now available in Firefox Translations.
+  
   - Enabled AV1 hardware decode acceleration on macOS for M3 Macs.
+  
   - and many more...
 
 
-  Full release notes are available at https://www.mozilla.org/en-US/firefox/126.0/releasenotes/
+  Full release notes are available at https://www.mozilla.org/en-US/firefox/126.0/releasenotes
 developer: Mozilla Foundation
 website: https://www.mozilla.org/en-US/firefox/
 dependencies: []
