--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.108.0"
+version: "v1.109.2"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -47,16 +47,16 @@ description: >-
 releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
+  
+  Welcome to version v1.109 of Immich. This release introduces an additional way for you to support Immich financially as well as bug fixes for various issues. Some of the highlights in this release include:
 
-  🚨 This release includes a security update for Node.js. While we don't think these CVEs affect Immich, we strongly recommend you update. For more details, see https://nodejs.org/en/blog/vulnerability/july-2024-security-releases.
+  - Immich licenses (and https://buy.immich.app)
+    
+  - "My Immich" url forwarder (https://my.immich.app)
 
+  - Generate thumbnail for iOS18 HEIC
 
-  Welcome to release `v1.108.0` of Immich. This release focuses on bug fixes and improvements across the app. We added a fun section of things we learned when working on Immich. You can take a look here at the [Cursed Knowledge](https://immich.app/cursed-knowledge) page. Some of the highlights in this release include:
-
-
-  - Notable fix: Use Redis for Websocket state tracking to allow HDD to spin down when inactive
-
-  - Using queue to improve CLI processing
+  - Generate Motion Photos for Pixel 6, 7, and 8
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
