--- a/.github/workflows/lint-apps.yml
+++ b/.github/workflows/lint-apps.yml
@@ -4,14 +4,10 @@ on:
   pull_request:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
   lint-apps:
     name: Lint apps
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-      - uses: sharknoon/umbrel-app-linter-action@v1.1.8
+      - uses: sharknoon/umbrel-app-linter-action@0e2fb2038f8fd2e839887b232f6310fc6bc0edf4
