--- a/seafile/umbrel-app.yml
+++ b/seafile/umbrel-app.yml
@@ -24,7 +24,18 @@ description: >
   Seafile is configured to work out-of-the-box when installed on Umbrel. However, if you want to be able to upload files from a domain name that is not umbrel.local,
   open the Seafile app, go to System Admin > Settings and change "FILE_SERVER_ROOT" to /seafhttp.
 releaseNotes: >-
-  This release updates Seafile from version 11.0.8 to 11.0.9. Full release notes can be found at https://manual.seafile.com/changelog/server-changelog/#1109-2024-05-30
+  This is a patch release with the following general changes:
+
+  - Accessibility improvements
+  
+  - Support for open ODG files with LibreOffice (Collabora Online)
+  
+  - Support fpr showing last modified time for folders in WebDAV
+  
+  - Fixed "remember me" in 2FA
+  
+
+  Full release notes can be found at https://manual.seafile.com/changelog/server-changelog/#1109-2024-05-30
 developer: Seafile
 website: https://www.seafile.com/
 dependencies: []
