--- a/.github/workflows/lint-apps.yml
+++ b/.github/workflows/lint-apps.yml
@@ -1,7 +1,7 @@
 name: Lint apps
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - master
 
@@ -10,4 +10,4 @@ jobs:
     name: Lint apps
     runs-on: ubuntu-latest
     steps:
-      - uses: sharknoon/umbrel-app-linter-action@0e2fb2038f8fd2e839887b232f6310fc6bc0edf4
+      - uses: sharknoon/umbrel-app-linter-action@0b674cd7d7b38d7cfe2a9cf79959208fbb69958b
