--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: bitcoin
 name: BTCPay Server
-version: "1.13.1"
+version: "1.13.5"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,20 +34,18 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update brings BTCPay Server to version 1.13.1, and includes various new features, bug fixes, and improvements.
+  This update brings BTCPay Server to version 1.13.5, and includes various new features, bug fixes, and improvements.
 
 
   Highlights:
 
-  - It is now possible to customize your instance name and add a contact URL in Server Settings
+  - Checkout now displays an item description if one is available
   
-  - There is a new Admin overview of the stores on the instance
+  - Crashed plugins are now automatically disabled on the dashboard
   
-  - Onboarding: Invite new users (#5714 #5719 #5874) @dennisreimann @dstrukt
+  - Refunds have now been added to reports
   
-  - A new option to add item list to keypad
-  
-  - Support for Better Bitcoin QRs (BBQr)
+  - General improvments to the POS, receipts, and invoices
 
 
   Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases.
